--- a/3_DL/3_cnn/fully_connected.ipynb
+++ b/3_DL/3_cnn/fully_connected.ipynb
@@ -26,8 +26,7 @@
     "\n",
     "import data\n",
     "import train\n",
-    "from fcnn import SimpleNN\n",
-    "from cnn import CNN"
+    "from model import FCNN, CNN"
    ]
   },
   {
@@ -106,15 +105,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training: 100%|██████████| 938/938 [00:06<00:00, 150.74it/s, loss=0.169]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.86it/s, loss=0.0439]"
+      "Training: 100%|██████████| 938/938 [00:07<00:00, 122.84it/s, loss=0.177]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 226.87it/s, loss=0.0622]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 98.57% \n",
+      "[INFO] [train] Test accuracy: 98.04% \n",
       "\n",
       "[INFO] [train] Epoch 2 / 20\n"
      ]
@@ -124,15 +123,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.90it/s, loss=0.0465]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 237.44it/s, loss=0.0389]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 178.77it/s, loss=0.05]  \n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.75it/s, loss=0.0382]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 98.73% \n",
+      "[INFO] [train] Test accuracy: 98.64% \n",
       "\n",
       "[INFO] [train] Epoch 3 / 20\n"
      ]
@@ -142,15 +141,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.41it/s, loss=0.0335]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.73it/s, loss=0.0362]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 178.40it/s, loss=0.0355]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.78it/s, loss=0.0279]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 98.67% \n",
+      "[INFO] [train] Test accuracy: 99.08% \n",
       "\n",
       "[INFO] [train] Epoch 4 / 20\n"
      ]
@@ -160,15 +159,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.64it/s, loss=0.0252]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.68it/s, loss=0.0278]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 178.49it/s, loss=0.0256]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 233.91it/s, loss=0.0336]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.02% \n",
+      "[INFO] [train] Test accuracy: 98.83% \n",
       "\n",
       "[INFO] [train] Epoch 5 / 20\n"
      ]
@@ -178,15 +177,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.29it/s, loss=0.0187]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.83it/s, loss=0.0365]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 178.74it/s, loss=0.02]  \n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.31it/s, loss=0.0257]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 98.83% \n",
+      "[INFO] [train] Test accuracy: 99.15% \n",
       "\n",
       "[INFO] [train] Epoch 6 / 20\n"
      ]
@@ -196,15 +195,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.15it/s, loss=0.0146]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.57it/s, loss=0.0332]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 178.64it/s, loss=0.0151]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.55it/s, loss=0.0307]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 98.92% \n",
+      "[INFO] [train] Test accuracy: 98.86% \n",
       "\n",
       "[INFO] [train] Epoch 7 / 20\n"
      ]
@@ -214,15 +213,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.79it/s, loss=0.0125]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.13it/s, loss=0.0294]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 178.76it/s, loss=0.0133]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.35it/s, loss=0.0296]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.00% \n",
+      "[INFO] [train] Test accuracy: 99.01% \n",
       "\n",
       "[INFO] [train] Epoch 8 / 20\n"
      ]
@@ -232,15 +231,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.58it/s, loss=0.0109] \n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.08it/s, loss=0.0262]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.42it/s, loss=0.00958]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 233.75it/s, loss=0.028] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.11% \n",
+      "[INFO] [train] Test accuracy: 99.19% \n",
       "\n",
       "[INFO] [train] Epoch 9 / 20\n"
      ]
@@ -250,15 +249,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.58it/s, loss=0.0068] \n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 237.01it/s, loss=0.0384]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.68it/s, loss=0.00848]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.85it/s, loss=0.0403]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 98.96% \n",
+      "[INFO] [train] Test accuracy: 98.91% \n",
       "\n",
       "[INFO] [train] Epoch 10 / 20\n"
      ]
@@ -268,15 +267,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.76it/s, loss=0.00797]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.54it/s, loss=0.0299]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.11it/s, loss=0.00808]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.10it/s, loss=0.0401]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.03% \n",
+      "[INFO] [train] Test accuracy: 98.91% \n",
       "\n",
       "[INFO] [train] Epoch 11 / 20\n"
      ]
@@ -286,15 +285,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.78it/s, loss=0.00688]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.93it/s, loss=0.0304]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.29it/s, loss=0.00596]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.62it/s, loss=0.0304]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.15% \n",
+      "[INFO] [train] Test accuracy: 99.13% \n",
       "\n",
       "[INFO] [train] Epoch 12 / 20\n"
      ]
@@ -304,15 +303,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.61it/s, loss=0.00452]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.94it/s, loss=0.031] "
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.33it/s, loss=0.00594]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.31it/s, loss=0.0393]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.14% \n",
+      "[INFO] [train] Test accuracy: 98.98% \n",
       "\n",
       "[INFO] [train] Epoch 13 / 20\n"
      ]
@@ -322,15 +321,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.43it/s, loss=0.0043] \n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.46it/s, loss=0.0322]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.79it/s, loss=0.00512]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.75it/s, loss=0.0392]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.20% \n",
+      "[INFO] [train] Test accuracy: 99.09% \n",
       "\n",
       "[INFO] [train] Epoch 14 / 20\n"
      ]
@@ -340,15 +339,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.92it/s, loss=0.00548]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.76it/s, loss=0.0441]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.53it/s, loss=0.00293]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.45it/s, loss=0.0504]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.02% \n",
+      "[INFO] [train] Test accuracy: 98.84% \n",
       "\n",
       "[INFO] [train] Epoch 15 / 20\n"
      ]
@@ -358,15 +357,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 180.00it/s, loss=0.00323]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.78it/s, loss=0.0305]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.67it/s, loss=0.00541]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.88it/s, loss=0.0412]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.19% \n",
+      "[INFO] [train] Test accuracy: 98.91% \n",
       "\n",
       "[INFO] [train] Epoch 16 / 20\n"
      ]
@@ -376,15 +375,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.82it/s, loss=0.00258]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.68it/s, loss=0.0674]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.82it/s, loss=0.00491]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.27it/s, loss=0.0369]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 98.62% \n",
+      "[INFO] [train] Test accuracy: 98.95% \n",
       "\n",
       "[INFO] [train] Epoch 17 / 20\n"
      ]
@@ -394,15 +393,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.93it/s, loss=0.00571]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.47it/s, loss=0.033] "
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.78it/s, loss=0.00246]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.42it/s, loss=0.0314]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.28% \n",
+      "[INFO] [train] Test accuracy: 99.20% \n",
       "\n",
       "[INFO] [train] Epoch 18 / 20\n"
      ]
@@ -412,15 +411,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.52it/s, loss=0.00178]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 237.50it/s, loss=0.0401]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.66it/s, loss=0.00369] \n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 235.02it/s, loss=0.0435]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.19% \n",
+      "[INFO] [train] Test accuracy: 98.91% \n",
       "\n",
       "[INFO] [train] Epoch 19 / 20\n"
      ]
@@ -430,15 +429,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.77it/s, loss=0.00435]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 237.17it/s, loss=0.0352]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.55it/s, loss=0.00295]\n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.49it/s, loss=0.0427]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.15% \n",
+      "[INFO] [train] Test accuracy: 99.02% \n",
       "\n",
       "[INFO] [train] Epoch 20 / 20\n"
      ]
@@ -448,17 +447,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.50it/s, loss=0.00175]\n",
-      "Validation: 100%|██████████| 157/157 [00:00<00:00, 236.99it/s, loss=0.0345]"
+      "Training: 100%|██████████| 938/938 [00:05<00:00, 179.28it/s, loss=0.0037] \n",
+      "Validation: 100%|██████████| 157/157 [00:00<00:00, 234.45it/s, loss=0.037] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [train] Test accuracy: 99.30% \n",
-      "\n",
-      "[INFO] [train] Early stopping threshold reached, training completed\n"
+      "[INFO] [train] Test accuracy: 99.07% \n",
+      "\n"
      ]
     },
     {
@@ -483,13 +481,6 @@
     "    model_dir=MODEL_DIR\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
